--- a/templates/Signup.html
+++ b/templates/Signup.html
@@ -26,7 +26,7 @@
                                             <span class="h1 fw-bold mb-0">Bank Management System</span>
                                         </div>
                                         
-                                        <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Sign uuup for an account</h5>
+                                        <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Sign uuuup for an account</h5>
                                         <div data-mdb-input-init class="form-outline mb-4">
                                             <input type="text" id="username" class="form-control form-control-lg" required />
                                             <label class="form-label" for="username">Username</label>
