--- a/templates/Signin.html
+++ b/templates/Signin.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+s<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
@@ -37,7 +37,7 @@
       
                       <div data-mdb-input-init class="form-outline mb-4">
                         <input type="password" id="signInPassword" class="form-control form-control-lg" placeholder="Enter Your Password Here!" name="log_pass" required />
-                        <label class="form-label" for="signInPassword">Password</label>
+                        <label class="form-label" for="signInPassword">Passsssssword</label>
                       </div>
       
                       <div class="pt-1 mb-4">
