--- a/templates/Signin.html
+++ b/templates/Signin.html
@@ -37,7 +37,7 @@ s<!DOCTYPE html>
       
                       <div data-mdb-input-init class="form-outline mb-4">
                         <input type="password" id="signInPassword" class="form-control form-control-lg" placeholder="Enter Your Password Here!" name="log_pass" required />
-                        <label class="form-label" for="signInPassword">Passsssssword</label>
+                        <label class="form-label" for="signInPassword">Password</label>
                       </div>
       
                       <div class="pt-1 mb-4">
