--- a/templates/Signin.html
+++ b/templates/Signin.html
@@ -27,7 +27,7 @@ s<!DOCTYPE html>
                       {% if x  %}
                       <h5 class="fw-normal mb-3 pb-3" style="letter-spacing : 1px; color: red;">Invalid Credential!</h5>
                       {% endif %}
-                      <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Sign into your account</h5>
+                      <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Siggn into your account</h5>
     
                       <!-- Input fields and login button -->
                       <div data-mdb-input-init class="form-outline mb-4">
