--- a/templates/Signin.html
+++ b/templates/Signin.html
@@ -22,7 +22,7 @@ s<!DOCTYPE html>
                     <form id="signinForm" onsubmit="return validateSignIn();" action="/user/sign_in" method="post">
                       <div class="d-flex align-items-center mb-3 pb-1">
                         <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
-                        <span class="h1 fw-bold mb-0">Baank Management System</span>
+                        <span class="h1 fw-bold mb-0">Bnk Management System</span>
                       </div>
                       {% if x  %}
                       <h5 class="fw-normal mb-3 pb-3" style="letter-spacing : 1px; color: red;">Invalid Credential!</h5>
